--- a/wild_not_you/views/index.pug
+++ b/wild_not_you/views/index.pug
@@ -2,8 +2,13 @@ extends layout
 
 block content
     header
-        include header.pug
+        p ici se trouve  nav.pug
+        include video_header.pug
     body
-        p Test sur mon body
+        p ici se trouve histoire
+        p ici se trouve serious_bar
+        p ici se trouve acceuil_profile
+        p ici se trouve fun_bar
+        p ici se trouve entreprise
     footer
-        p voici mon super footer genial
+        p ici se trouve footer
