--- a/wild_not_you/views/layout.pug
+++ b/wild_not_you/views/layout.pug
@@ -5,7 +5,9 @@ head
   meta(http-equiv='X-UA-Compatible' content='ie=edge')
   link(rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css' integrity='sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm' crossorigin='anonymous')
   link(rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css')
-  link(rel='stylesheet' href='/stylesheets/wild_not_you.css')
+  link(rel='stylesheet' href='/stylesheets/style.css')
+  script(src='javascripts/script.js' charset='utf-8')
+
   title Wild Not You ??
 
   body
