ajout section acceuil_entreprise

--- a/wild_not_you/views/index.pug
+++ b/wild_not_you/views/index.pug
@@ -7,7 +7,7 @@ block content
     body
         p ici se trouve histoire
         p ici se trouve serious_bar
-        p ici se trouve acceuil_profile
+        include acceuil_entreprise.pug
         p ici se trouve fun_bar
         p ici se trouve entreprise
     footer
