--- a/wild_not_you/public/stylesheets/style.css
+++ b/wild_not_you/public/stylesheets/style.css
@@ -6,39 +6,39 @@ body{
 #header .video_header{
     position:relative;
 }
-/* Par default, barre de recherche invisible */
-#header .search_bar{
-    display : none;
-}
-/* partie à supprimer ensuite ou à personnaliser si on le souhaite */
-#header #search_bar1{
-    border:2px red solid;
-}
-
-/* partie à supprimer ensuite ou à personnaliser si on le souhaite */
-#header #search_bar2{
-    border:2px green solid;
-}
 
 /* Dispo et taille des boutons - A redefinir ensuite selon la charte graphique */
 #header .btn_header_emploi, #header .btn_header_developpeur{
     width: 100%;
 }
 
-/* Nouvelle disposition sur desktop avec les boutons sur la vidéo */
-@media screen and (min-width: 960px) {
-    #header .content_searchbar {
-    position: absolute;
-    top:40%;
-  }
-  #header .btn_header_emploi, #header .btn_header_developpeur{
+ #header .btn_header_emploi, #header .btn_header_developpeur{
       height:100px;
       opacity: 0.7;
   }
-  #header .icon_search{
+#header .icon_search{
       background-color: rgba(0,0,0,0.7)
   }
-  #header .btn_header_emploi, #header .btn_header_developpeur{
+#header .btn_header_emploi, #header .btn_header_developpeur{
       margin-bottom: 5%;
   }
- }
+
+#header .input-group{
+    border:1px gray solid;
+    margin-top:2%;
+}
+
+#header .custom-select{
+    height: 50px;
+}
+
+@media screen and (min-width: 960px) {
+    #header .content_searchbar {
+    position: absolute;
+    top:45%;
+  }
+   /* Barre de recherche en une ligne (display flex) sur la vidéo */
+    #header .search_bar{
+    display: flex;
+    }
+}
