MAJ (enlevement) du filtre hover en version mobile

--- a/wild_not_you/views/index.pug
+++ b/wild_not_you/views/index.pug
@@ -3,7 +3,7 @@ extends layout
 block content
     header
         p ici se trouve  nav.pug
-        include video_header.pug
+        p ici se trouve video_header.pug
     body
         p ici se trouve histoire
         p ici se trouve serious_bar
