--- a/wild_not_you/public/stylesheets/style.css
+++ b/wild_not_you/public/stylesheets/style.css
@@ -1,192 +1,159 @@
-body{
-    font-size: 14px;
-    text-align: center;
+
+ #portofolio_entreprise{
+     margin-top: 5%;
+ }
+/* cadre des logos + couleur et taille du texte */
+ #portofolio_entreprise .content_cadre {
+  font-family: sans-serif;
+  position: relative;
+  display: inline-block;
+  overflow: hidden;
+  margin: 10px 0px;
+
+  max-width: 315px;
+  width: 100%;
+  color: #ffffff;
+  text-align: left;
+  border:5px double rgba(51, 51, 51, 0.3);
 }
 
-#header .video_header{
-    position:relative;
-}
-/* Par default, barre de recherche invisible */
-#header .search_bar{
-    display : none;
-}
-/* partie à supprimer ensuite ou à personnaliser si on le souhaite */
-#header #search_bar1{
-    border:2px red solid;
+
+
+#portofolio_entreprise .content_cadre * {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-transition: all 0.25s ease;
+  transition: all 0.25s ease;
 }
 
-/* partie à supprimer ensuite ou à personnaliser si on le souhaite */
-#header #search_bar2{
-    border:2px green solid;
+#portofolio_entreprise .content_cadre:before {
+  position: absolute;
+  top: 10px;
+  bottom: 10px;
+  left: 10px;
+  right: 10px;
+  top: 100%;
+  content: '';
+  background-color: rgba(35, 35, 35, 1);
+  -webkit-transition: all 0.25s ease;
+  transition: all 0.25s ease;
+  -webkit-transition-delay: 0.25s;
+  transition-delay: 0.25s;
+  visibility: hidden;
+
 }
 
-/* Dispo et taille des boutons - A redefinir ensuite selon la charte graphique */
-#header .btn_header_emploi, #header .btn_header_developpeur{
-    width: 100%;
+#portofolio_entreprise .content_cadre img {
+  vertical-align: top;
+  max-width: 100%;
+  backface-visibility: hidden;
 }
 
-/* Nouvelle disposition sur desktop avec les boutons sur la vidéo */
+
+#portofolio_entreprise .content_cadre figcaption {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 1;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  visibility: hidden;
+}
+
+#portofolio_entreprise .content_cadre h3,
+#portofolio_entreprise .content_cadre p {
+  margin: 0;
+  width:80%;
+  opacity: 0;
+  letter-spacing: 1px;
+  text-align: center;
+}
+
+#portofolio_entreprise .content_cadre h3 {
+  -webkit-transform: translateY(-100%);
+  transform: translateY(-100%);
+  text-transform: uppercase;
+  font-size:1rem;
+  font-weight: 400;
+  -webkit-transition-delay: 0.05s;
+  transition-delay: 0.05s;
+  margin-bottom: 5px;
+}
+#portofolio_entreprise .content_cadre p {
+  font-size: 0.6rem;
+  font-weight: normal;
+  background-color: #ae895d;
+  padding: 3px 10px;
+  -webkit-transform: translateY(-100%);
+  transform: translateY(-100%);
+  -webkit-transition-delay: 0s;
+  transition-delay: 0s;
+}
+#portofolio_entreprise .content_cadre a {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 1;
+}
+#portofolio_entreprise .content_cadre:hover:before,
+#portofolio_entreprise .content_cadre.hover:before {
+  top: 10px;
+  -webkit-transition-delay: 0s;
+  transition-delay: 0s;
+}
+#portofolio_entreprise .content_cadre:hover h3,
+#portofolio_entreprise .content_cadre.hover h3,
+#portofolio_entreprise .content_cadre:hover p,
+#portofolio_entreprise .content_cadre.hover p {
+  -webkit-transform: translateY(0);
+  transform: translateY(0);
+  opacity: 1;
+}
+#portofolio_entreprise .content_cadre:hover h3,
+#portofolio_entreprise .content_cadre.hover h3 {
+  -webkit-transition-delay: 0.3s;
+  transition-delay: 0.3s;
+}
+#portofolio_entreprise .content_cadre:hover p,
+#portofolio_entreprise .content_cadre.hover p {
+  -webkit-transition-delay: 0.2s;
+  transition-delay: 0.2s;
+}
+
+
+
+@media screen and (min-width: 960px) and (max-width:1140px){
+    #portofolio_entreprise .content_cadre h3{
+        font-size: 1.7rem;
+    }
+    #portofolio_entreprise .content_cadre p {
+        font-size: 1rem;
+    }
+}
+
+@media screen and (min-width: 1140px){
+    #portofolio_entreprise .content_cadre h3{
+        font-size: 2rem;
+    }
+    #portofolio_entreprise .content_cadre p {
+        font-size: 1.3rem;
+    }
+}
+
+
+/* Nouvelle disposition sur desktop avec la barre de recherche sur la vidéo */
 @media screen and (min-width: 960px) {
-    #header .content_searchbar {
-    position: absolute;
-    top:40%;
-  }
-  #header .btn_header_emploi, #header .btn_header_developpeur{
-      height:100px;
-      opacity: 0.7;
-  }
-  #header .icon_search{
-      background-color: rgba(0,0,0,0.7)
-  }
-  #header .btn_header_emploi, #header .btn_header_developpeur{
-      margin-bottom: 5%;
-  }
- }
-
-
-
- /* CSS de la section acceuil_entreprise */
-
-
-  #portofolio_entreprise{
-      margin-top: 5%;
-  }
- /* cadre des logos + couleur et taille du texte */
-  #portofolio_entreprise .content_cadre {
-   font-family: sans-serif;
-   position: relative;
-   display: inline-block;
-   overflow: hidden;
-   margin: 10px 0px;
-   /*min-width: 230px;*/
-   max-width: 315px;
-   width: 100%;
-   color: #ffffff;
-   text-align: left;
-   border:5px double rgba(51, 51, 51, 0.3);
- }
-
-
-
- #portofolio_entreprise .content_cadre * {
-   -webkit-box-sizing: border-box;
-   box-sizing: border-box;
-   -webkit-transition: all 0.25s ease;
-   transition: all 0.25s ease;
- }
-
- #portofolio_entreprise .content_cadre:before {
-   position: absolute;
-   top: 10px;
-   bottom: 10px;
-   left: 10px;
-   right: 10px;
-   top: 100%;
-   content: '';
-   background-color: rgba(35, 35, 35, 1);
-   -webkit-transition: all 0.25s ease;
-   transition: all 0.25s ease;
-   -webkit-transition-delay: 0.25s;
-   transition-delay: 0.25s;
-
- }
-
- #portofolio_entreprise .content_cadre img {
-   vertical-align: top;
-   max-width: 100%;
-   backface-visibility: hidden;
- }
-
-
- #portofolio_entreprise .content_cadre figcaption {
-   position: absolute;
-   top: 0;
-   bottom: 0;
-   left: 0;
-   right: 0;
-   z-index: 1;
-   align-items: center;
-   display: flex;
-   flex-direction: column;
-   justify-content: center;
- }
-
- #portofolio_entreprise .content_cadre h3,
- #portofolio_entreprise .content_cadre p {
-   margin: 0;
-   width:80%;
-   opacity: 0;
-   letter-spacing: 1px;
-   text-align: center;
- }
- #portofolio_entreprise .content_cadre h3 {
-   -webkit-transform: translateY(-100%);
-   transform: translateY(-100%);
-   text-transform: uppercase;
-   font-size:1rem;
-   font-weight: 400;
-   -webkit-transition-delay: 0.05s;
-   transition-delay: 0.05s;
-   margin-bottom: 5px;
- }
- #portofolio_entreprise .content_cadre p {
-   font-size: 0.6rem;
-   font-weight: normal;
-   background-color: #ae895d;
-   padding: 3px 10px;
-   -webkit-transform: translateY(-100%);
-   transform: translateY(-100%);
-   -webkit-transition-delay: 0s;
-   transition-delay: 0s;
- }
- #portofolio_entreprise .content_cadre a {
-   position: absolute;
-   top: 0;
-   bottom: 0;
-   left: 0;
-   right: 0;
-   z-index: 1;
- }
- #portofolio_entreprise .content_cadre:hover:before,
- #portofolio_entreprise .content_cadre.hover:before {
-   top: 10px;
-   -webkit-transition-delay: 0s;
-   transition-delay: 0s;
- }
- #portofolio_entreprise .content_cadre:hover h3,
- #portofolio_entreprise .content_cadre.hover h3,
- #portofolio_entreprise .content_cadre:hover p,
- #portofolio_entreprise .content_cadre.hover p {
-   -webkit-transform: translateY(0);
-   transform: translateY(0);
-   opacity: 1;
- }
- #portofolio_entreprise .content_cadre:hover h3,
- #portofolio_entreprise .content_cadre.hover h3 {
-   -webkit-transition-delay: 0.3s;
-   transition-delay: 0.3s;
- }
- #portofolio_entreprise .content_cadre:hover p,
- #portofolio_entreprise .content_cadre.hover p {
-   -webkit-transition-delay: 0.2s;
-   transition-delay: 0.2s;
- }
-
-
- @media screen and (min-width: 960px) and (max-width:1140px){
-     #portofolio_entreprise .content_cadre h3{
-         font-size: 1.7rem;
-     }
-     #portofolio_entreprise .content_cadre p {
-         font-size: 1rem;
-     }
- }
-
- @media screen and (min-width: 1140px){
-     #portofolio_entreprise .content_cadre h3{
-         font-size: 2rem;
-     }
-     #portofolio_entreprise .content_cadre p {
-         font-size: 1.3rem;
-     }
- }
+       /* activation du filtre hover en version desktop */
+    #portofolio_entreprise .content_cadre figcaption{
+        visibility: visible;
+    }
+    #portofolio_entreprise .content_cadre:before {
+        visibility: visible;
+    }
+}
