Ajout pour footer v1

--- a/wild_not_you/views/index.pug
+++ b/wild_not_you/views/index.pug
@@ -1,9 +1,7 @@
 extends layout
 
 block content
-    header
-        include header.pug
-    body
-        p Test sur mon body
-    footer
-        p voici mon super footer genial
+	header
+	body
+	footer
+		include footer.pug
