--- a/style.css
+++ b/style.css
@@ -290,3 +290,8 @@ font-size: 2em;
 #myFooter label {
   margin-bottom: 0;
 }
+.fake-div {
+  width:100%;
+  height: 1280px;
+  position:relative;
+}
