--- a/views/index.pug
+++ b/views/index.pug
@@ -5,5 +5,6 @@ block content
         include header.pug
     body
         p Test sur mon body
+        include serious-bar.pug
     footer
         p voici mon super footer genial
