--- a/views/serious-bar.pug
+++ b/views/serious-bar.pug
@@ -13,7 +13,7 @@ html(lang='en')
     link(href='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css', rel='stylesheet')
     link(rel='stylesheet', href='https://use.fontawesome.com/releases/v5.0.9/css/all.css', integrity='sha384-5SOiIsAziJl6AWe0HWRKTXlfcSHKmYV4RBF18PPJ173Kzn7jzMyFuTtk8JA7QQG1', crossorigin='anonymous')
     link(href='https://fonts.googleapis.com/css?family=Lato:300,300i,400,400i,700,700i', rel='stylesheet')
-    link(href='style.css', rel='stylesheet')
+    link(href='stylesheets/style.css', rel='stylesheet')
     // HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries
     //if lt IE 9
       script(src='https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js')
