--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,44 +3,44 @@
 -------------------------*/
 @font-face {
     font-family: 'bebas_neuebold';
-    src: url('./fonts/bebasneue_bold-webfont.woff2') format('woff2'),
-         url('./fonts/bebasneue_bold-webfont.woff') format('woff');
+    src: url('/fonts/bebasneue_bold-webfont.woff2') format('woff2'),
+         url('/fonts/bebasneue_bold-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
 @font-face {
     font-family: 'bebas_neuebook';
-    src: url('./fonts/bebasneue_book-webfont.woff2') format('woff2'),
-         url('./fonts/bebasneue_book-webfont.woff') format('woff');
+    src: url('/fonts/bebasneue_book-webfont.woff2') format('woff2'),
+         url('/fonts/bebasneue_book-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
 @font-face {
     font-family: 'bebas_neuelight';
-    src: url('./fonts/bebasneue_light-webfont.woff2') format('woff2'),
-         url('./fonts/bebasneue_light-webfont.woff') format('woff');
+    src: url('/fonts/bebasneue_light-webfont.woff2') format('woff2'),
+         url('/fonts/bebasneue_light-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
 @font-face {
     font-family: 'bebas_neueregular';
-    src: url('./fonts/bebasneue_regular-webfont.woff2') format('woff2'),
-         url('./fonts/bebasneue_regular-webfont.woff') format('woff');
+    src: url('/fonts/bebasneue_regular-webfont.woff2') format('woff2'),
+         url('/fonts/bebasneue_regular-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
 @font-face {
     font-family: 'bebas_neuethin';
-    src: url('./fonts/bebasneue_thin-webfont.woff2') format('woff2'),
-         url('./fonts/bebasneue_thin-webfont.woff') format('woff');
+    src: url('/fonts/bebasneue_thin-webfont.woff2') format('woff2'),
+         url('/fonts/bebasneue_thin-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'bestloversregular';
-    src: url('./fonts/bestlovers-webfont.woff2') format('woff2'),
-         url('./fonts/bestlovers-webfont.woff') format('woff');
+    src: url('/fonts/bestlovers-webfont.woff2') format('woff2'),
+         url('/fonts/bestlovers-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
