--- a/views/serious-bar.pug
+++ b/views/serious-bar.pug
@@ -44,4 +44,4 @@ html(lang='en')
     // Placed at the end of the document so the pages load faster
     script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js')
     script(src='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js')
-    script(src='script.js', type='text/javascript', charset='utf-8', async='', defer='')
+    script(src='/scripts/script.js', type='text/javascript', charset='utf-8', async='', defer='')
