--- a/style.css
+++ b/style.css
@@ -27,13 +27,13 @@
 }
 
 #myFooter {
-	color:#ffc107;
-	background-color: #1d1f20;
+	color:white; 
+	background-color: #8f201a; /* rouge */
 }
 
 #myFooter a{
 	text-decoration: none;
-	color:#ffc107;
+	color:white;
 }
 
 #myFooter ul {
@@ -58,7 +58,7 @@ font-size: 2em;
 
 #myFooter .icon a {
 	margin-left: 0.5em;
-	color:#ffc107;
+	color:white;
 }
 
 #myFooter .icon:hover {
@@ -196,7 +196,7 @@ font-size: 2em;
   z-index: 10;
   width: 100%;
   background: transparent;
-  color: #f5f5f5;
+  color: #8F201a;
   opacity: 0;
   -webkit-transition: opacity 0.3s;
   transition: opacity 0.3s;
@@ -205,7 +205,7 @@ font-size: 2em;
 #myFooter .input__label--yoko { /* Texte sous l'input */
   position: relative;
   width: 100%;
-  color: #ffc107; /* Jaune */
+  color: white; /* Anciennement Jaune */
   text-align: left;
 }
 
@@ -216,7 +216,7 @@ font-size: 2em;
   left: 0;
   width: 100%;
   height: 4em;
-  background: #ffc107; /* Jaune */
+  background: white; /* Anciennement Jaune */
   -webkit-transform: perspective(1000px) rotate3d(1, 0, 0, 90deg);
   transform: perspective(1000px) rotate3d(1, 0, 0, 90deg);
   -webkit-transform-origin: 50% 100%;
@@ -280,7 +280,7 @@ font-size: 2em;
 
 #myFooter .form-control {
     margin-bottom: 0;
-    background-color: black;
+    background-color: #8f201a; /* rouge */
 }
 
 #myFooter .form-group {
