--- a/style.css
+++ b/style.css
@@ -60,16 +60,19 @@ h2, h3, h4, h5 {
 .bg-blue{
 	background-color: #19112f; 
 }
+.bg-white{
+    background-color: #FFF;
+}
 .pt-l{padding-top:5rem;}
 .pb-l{padding-bottom: 5rem;}
+
 /*------------------------
-	    SERIOUS BAR
+	  OFFRES D'EMPLOIS
 -------------------------*/
-.counter-value{
-	font-family: 'bebas_neueregular';
-	font-size: 4rem;
+
+#job h2 {
+    font-family: 'bebas_neuebold';
 }
-.fake {
-	height: 500px;
-	width: 100%;
-}
+
+
+
