--- a/views/layout.pug
+++ b/views/layout.pug
@@ -12,3 +12,8 @@ head
 
   body
     block content
+
+    
+    script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js')
+    script(src='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js')
+    script(src='/scripts/script.js', type='text/javascript', charset='utf-8', async='', defer='')
