--- a/views/layout.pug
+++ b/views/layout.pug
@@ -6,7 +6,6 @@ head
   link(rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css' integrity='sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm' crossorigin='anonymous')
   link(rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css')
   link(rel='stylesheet' href='/stylesheets/style.css')
-  script(src='javascripts/script.js' charset='utf-8')
 
   title Wild Not You ??
 
@@ -16,4 +15,4 @@ head
     
     script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js')
     script(src='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js')
-    script(src='/scripts/script.js', type='text/javascript', charset='utf-8', async='', defer='')
+    script(src='javascripts/script.js', type='text/javascript', charset='utf-8', async='', defer='')
