--- a/views/index.pug
+++ b/views/index.pug
@@ -9,7 +9,9 @@ block content
         include serious-bar.pug
         include acceuil_entreprise.pug
         p ici se trouve fun_bar
+	include fun-bar.pug
         p ici se trouve entreprise
     footer
         p ici se trouve footer
+	include footer_collab.pug
 
