Correciton fun-bar

--- a/views/fun-bar.pug
+++ b/views/fun-bar.pug
@@ -27,13 +27,13 @@ html(lang='en')
             .col-4
               i.fas.fa-4x.fa-glass
               .counter-value(data-count='900') 0
-              h2 Heures de Mario-Kart
-            .col-4
-              i.far.fa-4x.fa-wine-nintendo-switch
-              .counter-value(data-count='221000') 0
               h2 Caisses de St Emilion
             .col-4
-              i.far.fa-4x.fa-utensils
+              i.fab.fa-4x.fa-nintendo-switch
+              .counter-value(data-count='221000') 0
+              h2 Heures de Mario-Kart
+            .col-4
+              i.fas.fa-4x.fa-utensils
               .counter-value(data-count='2100') 0
               h2 Toasts de foie gras
       // /.container
