--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
     text-decoration: none;
+    text-align: center;
     color:black;
     background-image: url("https://www.toptal.com/designers/subtlepatterns/patterns/concrete_seamless.png");
 }
@@ -34,15 +35,36 @@ body {
     color:rgba(25,17,47);
     border-bottom:1px dashed rgba(25,17,47);
     padding-bottom: 5%;
-    margin:0 15%;
+    margin:0 12%;
 }
 
 .collab .img-fluid{
-    margin-top:50%;
+    margin:auto;
     border-radius: 0.2em;
     box-shadow: 2px 2px 20px black;
 }
 
 .collab .lang{
-    color:rgba(10, 120,147, 1);
+ color:rgba(10, 120,147, 1);
+}
+
+
+@media screen and (min-width: 960px){
+    .collab h2 {
+        font-size: 2.5em;
+        padding-bottom: 2%;
+        margin : 2% auto;
+    }
+    
+    .collab .devDesc {
+        margin:auto auto 10% auto;
+    }
+    
+    .collab .perso {
+        margin: 2%;
+    }
+}
+
+@media screen and (min-width: 1140px){
+    
 }
