Chgt couleurs + icon sur fun-bar

--- a/views/fun-bar.pug
+++ b/views/fun-bar.pug
@@ -20,21 +20,21 @@ html(lang='en')
       script(src='https://oss.maxcdn.com/respond/1.4.2/respond.min.js')
   body
     .fake
-    section#serious-bar.bg-blue.pt-l.pb-l
+    section#funBar.bg-red.pt-l.pb-l
       .container
         #counter
           .row.text-center.text-white
             .col-4
-              i.fas.fa-4x.fa-glass
-              .counter-value(data-count='900') 0
+              i.fas.fa-4x.fa-wine-glass
+              .counter-value(data-count='928') 0
               h2 Caisses de St Emilion
             .col-4
               i.fab.fa-4x.fa-nintendo-switch
-              .counter-value(data-count='221000') 0
+              .counter-value(data-count='221001') 0
               h2 Heures de Mario-Kart
             .col-4
               i.fas.fa-4x.fa-utensils
-              .counter-value(data-count='2100') 0
+              .counter-value(data-count='2137') 0
               h2 Toasts de foie gras
       // /.container
     .fake
