--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -60,6 +60,9 @@ h2, h3, h4, h5 {
 .bg-blue{
 	background-color: #19112f;
 }
+.bg-red{
+  background-color: #8f201a;
+}
 .pt-l{padding-top:5rem;}
 .pb-l{padding-bottom: 5rem;}
 
@@ -286,27 +289,13 @@ a {
    }
 }
 
-<<<<<<< HEAD
-/*__________________________*/
-/* ______ SERIOUS BAR ______*/
-/*__________________________*/
-#seriousBar .fake-div {
-  width:100%;
-  height: 1280px;
-  position:relative;
+#funBar .counter-value{
+  font-family: 'bebas_neueregular';
+  font-size: 4rem;
 }
-
-#seriousBar .row {
-	padding: 1em;
-	text-align: center;
-	background-color: #19112f;
-	color: white;
-	padding-bottom: 5rem;
-	padding-top: 5rem;
-}
-
-#seriousBar .fa-5x {
-	color: white;
+#funBar .fake {
+  height: 500px;
+  width: 100%;
 }
 
 /*_____________________*/
