--- a/views/index.pug
+++ b/views/index.pug
@@ -2,7 +2,7 @@ extends layout
 
 block content
     header
-        p ici se trouve nav.pug
+        p ici se trouve nav
         include video_header.pug
     body
         p ici se trouve histoire
@@ -10,5 +10,6 @@ block content
         include acceuil_entreprise.pug
         p ici se trouve fun_bar
         p ici se trouve entreprise
+        include section_collab.pug
     footer
         p ici se trouve footer
