Ajout logo sur video acceuil

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -271,7 +271,7 @@ a {
 @media screen and (min-width: 960px) {
    #header .content_searchbar {
    position: absolute;
-   top:45%;
+   top:50%;
  }
   /* Barre de recherche en une ligne (display flex) sur la vidéo */
    #header .search_bar{
@@ -287,7 +287,7 @@ a {
 }
 
 
-/* CSS de la NavBar */ 
+/* CSS de la NavBar */
 @import "https://fonts.googleapis.com/css?family=Lato:400,700,900";
 
 
@@ -348,7 +348,7 @@ a {
 
 
 .fred_nav_logo_img {
-  background-image: url('images/wyn-logo.png');
+  background-image: url('../images/wyn-logo.png');
   background-repeat: no-repeat;
   width: 160px;
   height: 303px;
@@ -435,5 +435,3 @@ a {
     border: 0;
   }
 }
-
-  
