--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -62,7 +62,7 @@ h2, h3, h4, h5 {
 }
 
 .bg-blue{
-  background-color: #19112f; 
+  background-color: #19112f;
 }
 .pt-l{padding-top:5rem;}
 .pb-l{padding-bottom: 5rem;}
@@ -193,6 +193,170 @@ h2, h3, h4, h5 {
   padding-top: 100px;
 }
 
+/*-----------------------
+    HEADER VIDEO
+-----------------------*/
+
+#header .video_header{
+    position:relative;
+}
+
+/* Dispo et taille des boutons - A redefinir ensuite selon la charte graphique */
+#header .btn_header_emploi, #header .btn_header_developpeur{
+    width: 100%;
+}
+
+ #header .btn_header_emploi, #header .btn_header_developpeur{
+      height:100px;
+      opacity: 0.7;
+  }
+#header .icon_search{
+      background-color: rgba(0,0,0,0.7)
+  }
+#header .btn_header_emploi, #header .btn_header_developpeur{
+      margin-bottom: 5%;
+  }
+
+#header .input-group{
+    border:1px gray solid;
+    margin-top:2%;
+}
+
+#header .custom-select{
+    height: 50px;
+}
+
+
+/* --------------------
+     PORTOFOLIO ENTREPRISE
+------------------------ */
+#portofolio_entreprise{
+    margin-top: 5%;
+}
+/* cadre des logos + couleur et taille du texte */
+#portofolio_entreprise .content_cadre {
+ font-family: sans-serif;
+ position: relative;
+ display: inline-block;
+ overflow: hidden;
+ margin: 10px 0px;
+
+ max-width: 315px;
+ width: 100%;
+ color: #ffffff;
+ text-align: left;
+ border:5px double rgba(51, 51, 51, 0.3);
+}
+
+
+
+#portofolio_entreprise .content_cadre * {
+ -webkit-box-sizing: border-box;
+ box-sizing: border-box;
+ -webkit-transition: all 0.25s ease;
+ transition: all 0.25s ease;
+}
+
+#portofolio_entreprise .content_cadre:before {
+ position: absolute;
+ top: 10px;
+ bottom: 10px;
+ left: 10px;
+ right: 10px;
+ top: 100%;
+ content: '';
+ background-color: rgba(35, 35, 35, 1);
+ -webkit-transition: all 0.25s ease;
+ transition: all 0.25s ease;
+ -webkit-transition-delay: 0.25s;
+ transition-delay: 0.25s;
+ visibility: hidden;
+
+}
+
+#portofolio_entreprise .content_cadre img {
+ vertical-align: top;
+ max-width: 100%;
+ backface-visibility: hidden;
+}
+
+
+#portofolio_entreprise .content_cadre figcaption {
+ position: absolute;
+ top: 0;
+ bottom: 0;
+ left: 0;
+ right: 0;
+ z-index: 1;
+ align-items: center;
+ display: flex;
+ flex-direction: column;
+ justify-content: center;
+ visibility: hidden;
+}
+
+#portofolio_entreprise .content_cadre h3,
+#portofolio_entreprise .content_cadre p {
+ margin: 0;
+ width:80%;
+ opacity: 0;
+ letter-spacing: 1px;
+ text-align: center;
+}
+
+#portofolio_entreprise .content_cadre h3 {
+ -webkit-transform: translateY(-100%);
+ transform: translateY(-100%);
+ text-transform: uppercase;
+ font-size:1rem;
+ font-weight: 400;
+ -webkit-transition-delay: 0.05s;
+ transition-delay: 0.05s;
+ margin-bottom: 5px;
+}
+#portofolio_entreprise .content_cadre p {
+ font-size: 0.6rem;
+ font-weight: normal;
+ background-color: #ae895d;
+ padding: 3px 10px;
+ -webkit-transform: translateY(-100%);
+ transform: translateY(-100%);
+ -webkit-transition-delay: 0s;
+ transition-delay: 0s;
+}
+#portofolio_entreprise .content_cadre a {
+ position: absolute;
+ top: 0;
+ bottom: 0;
+ left: 0;
+ right: 0;
+ z-index: 1;
+}
+#portofolio_entreprise .content_cadre:hover:before,
+#portofolio_entreprise .content_cadre.hover:before {
+ top: 10px;
+ -webkit-transition-delay: 0s;
+ transition-delay: 0s;
+}
+#portofolio_entreprise .content_cadre:hover h3,
+#portofolio_entreprise .content_cadre.hover h3,
+#portofolio_entreprise .content_cadre:hover p,
+#portofolio_entreprise .content_cadre.hover p {
+ -webkit-transform: translateY(0);
+ transform: translateY(0);
+ opacity: 1;
+}
+#portofolio_entreprise .content_cadre:hover h3,
+#portofolio_entreprise .content_cadre.hover h3 {
+ -webkit-transition-delay: 0.3s;
+ transition-delay: 0.3s;
+}
+#portofolio_entreprise .content_cadre:hover p,
+#portofolio_entreprise .content_cadre.hover p {
+ -webkit-transition-delay: 0.2s;
+ transition-delay: 0.2s;
+}
+
 
 /*------------------------
          COLLAB
@@ -224,9 +388,9 @@ h2, h3, h4, h5 {
     margin: 0 3% 0 -4%;
     padding: 0 5%;
 }
-  
+
 .collab h2 {
-    text-align: center; 
+    text-align: center;
     font-size: 2em;
     color:rgba(25,17,47);
     border-bottom:1px dashed rgba(25,17,47);
@@ -298,7 +462,7 @@ h2, h3, h4, h5 {
 }
 
 #myFooter {
-  color:white; 
+  color:white;
   background-color: #8f201a; /* rouge */
 }
 
@@ -343,7 +507,7 @@ font-size: 2em;
   10%, 90% {
     transform: translate3d(-1px, 0, 0);
   }
-  
+
   20%, 80% {
     transform: translate3d(2px, 0, 0);
   }
@@ -575,11 +739,11 @@ font-size: 2em;
         padding-bottom: 2%;
         margin : 2% auto;
     }
-    
+
     .collab .devDesc {
         margin:auto auto 10% auto;
     }
-    
+
     .collab .perso {
         margin: 2%;
     }
@@ -612,6 +776,16 @@ font-size: 2em;
   }
 }
 
+@media screen and (min-width: 960px) and (max-width:1140px){
+    #portofolio_entreprise .content_cadre h3{
+        font-size: 1.7rem;
+    }
+    #portofolio_entreprise .content_cadre p {
+        font-size: 1rem;
+    }
+}
+
+
 @media screen and (min-width: 1140px){
 
    #portofolio_entreprise .content_cadre h3{
@@ -621,4 +795,3 @@ font-size: 2em;
        font-size: 1.3rem;
    }
 }
-
