--- a/views/index.pug
+++ b/views/index.pug
@@ -5,14 +5,9 @@ block content
         include nav.pug
         include video_header.pug
     body
-        p ici se trouve histoire
-        include serious-bar.pug
-        include acceuil_entreprise.pug
-        p ici se trouve fun_bar
+        include carousel-job.pug
         include fun-bar.pug
-        p ici se trouve entreprise
-        include section_collab.pug
+        include acceuil_entreprise.pug
     footer
-        p ici se trouve footer
         include footer_collab.pug
 
