--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,7 +4,9 @@ head
   meta(name='viewport' content='width=device-width, initial-scale=1.0')
   meta(http-equiv='X-UA-Compatible' content='ie=edge')
   link(rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css' integrity='sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm' crossorigin='anonymous')
-  link(rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css')
+  link(rel='stylesheet', href='https://use.fontawesome.com/releases/v5.0.9/css/all.css', integrity='sha384-5SOiIsAziJl6AWe0HWRKTXlfcSHKmYV4RBF18PPJ173Kzn7jzMyFuTtk8JA7QQG1', crossorigin='anonymous')
+  link(rel='stylesheet' href='/stylesheets/slick.css')
+  link(rel='stylesheet' href='/stylesheets/slick-theme.css')
   link(rel='stylesheet' href='/stylesheets/style.css')
 
   title Wild Not You ??
@@ -15,4 +17,5 @@ head
     
     script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js')
     script(src='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js')
+    script(src='javascripts/slick.js', type='text/javascript', charset='utf-8')
     script(src='javascripts/script.js', type='text/javascript', charset='utf-8', async='', defer='')
