branche final mise à jour avec lien fonctionnel sur page recruteur et page administration

--- a/views/footer_collab.pug
+++ b/views/footer_collab.pug
@@ -26,8 +26,8 @@ section#myFooter
           li 06 66 96 17 77
         h3 Horaires
         ul
-          li Semaine : 9h00 - 18h30 
-          li Week-end : Ferm&eacute; 
+          li Semaine : 9h00 - 18h30
+          li Week-end : Ferm&eacute;
       .col-12.col-sm-6.col-lg-3.infos
         // 3eme colonne
         span.input.input--minoru
@@ -70,17 +70,12 @@ section#myFooter
       .col
         p Alex est un super formateur
       .col.cl-effect-1
-        a(href='https://www.service-public.fr/professionnels-entreprises/vosdroits/F31228' target='_blank') Mention l&eacute;gale
+        a(href='https://www.service-public.fr/professionnels-entreprises/vosdroits/F31228' target='_blank') Mentions l&eacute;gales
       .col.cl-effect-1
         p
           a(href='https://github.com/WildCodeSchool/bdx-0218-js-agencedigitale' target='_blank') What&apos;s Ouside The World
+      .col.cl-effect-1
+        a(href='/admin') Administration
     // End row mention
   // End Container
 // End myFooter
-// BOOTRAP 4 JQUERY
-script(src='https://code.jquery.com/jquery-3.2.1.slim.min.js' integrity='sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN' crossorigin='anonymous')
-// BOOTRAP 4 AJAX
-script(src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js' integrity='sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q' crossorigin='anonymous')
-// BOOTRAP 4
-script(src='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js' integrity='sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl' crossorigin='anonymous')
-
