--- a/views/layout.pug
+++ b/views/layout.pug
@@ -14,8 +14,11 @@ head
   body
     block content
 
-    
+    // BOOTRAP 4 JQUERY
     script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js')
+    // BOOTRAP 4
     script(src='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js')
+    // BOOTRAP 4 AJAX
+    script(src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js' integrity='sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q' crossorigin='anonymous')
     script(src='javascripts/slick.js', type='text/javascript', charset='utf-8')
     script(src='javascripts/script.js', type='text/javascript', charset='utf-8', async='', defer='')
