--- a/views/nav.pug
+++ b/views/nav.pug
@@ -3,7 +3,7 @@ nav.navbar.navbar-expand-lg.fixed-top.navbar-light.cl-effect-5
   .container.position-relative
     a#log.navbar-brand(href='#')
       img.img-fluid(src='images/wny-logo.jpg' alt='logo')
-    a.navbar-recruteur(href='#')
+    a.navbar-recruteur(href='/recruteur')
       span(data-hover='RECRUTEUR') RECRUTEUR
     // BURGER RESPONSIVE
     button.navbar-toggler(type='button' data-toggle='collapse' data-target='#navbarTogglerDemo02' aria-controls='navbarTogglerDemo02' aria-expanded='false' aria-label='Toggle navigation')
@@ -19,5 +19,3 @@ nav.navbar.navbar-expand-lg.fixed-top.navbar-light.cl-effect-5
           a.nav-link(href='#') Nos missions
         li#border.nav-item
           a.nav-link(href='#') Blog
-
-
