--- a/views/recruteur.pug
+++ b/views/recruteur.pug
@@ -5,6 +5,7 @@ block content
         include nav.pug
         include video_header_recruteur.pug
     body
+        include formulaire.pug
         include section_collab.pug
         include serious-bar.pug
         include acceuil_entreprise.pug
