modif chemin images fichier header  blog

--- a/views/blog_header.pug
+++ b/views/blog_header.pug
@@ -1,4 +1,4 @@
 header#header_blog.position-relative
-	img.img-fluid(src="public/images/blog_header.jpg" alt="Responsive image")
-	img.logo_wild.position-absolute(src="public/images/wyn-logo.png" alt="")
+	img.img-fluid(src="/images/blog_header.jpg" alt="Responsive image")
+	img.logo_wild.position-absolute(src="/images/wyn-logo.png" alt="")
 	.position-absolute.writeit
