--- a/views/layout.pug
+++ b/views/layout.pug
@@ -8,6 +8,7 @@ head
   link(rel='stylesheet' href='/stylesheets/slick.css')
   link(rel='stylesheet' href='/stylesheets/slick-theme.css')
   link(rel='stylesheet' href='/stylesheets/style.css')
+  link(rel='stylesheet' href='/stylesheets/page_emploi.css')
 
   title Wild Not You ??
 
