--- a/views/nav.pug
+++ b/views/nav.pug
@@ -14,6 +14,6 @@ nav.navbar.navbar-expand-lg.fixed-top.navbar-light.cl-effect-5
         li.nav-item
           a.nav-link(href='#') Notre concept
         li.nav-item
-          a.nav-link(href='#') Nos missions
+          a.nav-link(href='/emploi') Nos missions
         li#border.nav-item
-          a.nav-link(href='#') Blog
+          a.nav-link(href='#/') Blog
