--- a/views/nav.pug
+++ b/views/nav.pug
@@ -16,4 +16,4 @@ nav.navbar.navbar-expand-lg.fixed-top.navbar-light.cl-effect-5
         li.nav-item
           a.nav-link(href='/emploi') Nos missions
         li#border.nav-item
-          a.nav-link(href='#/') Blog
+          a.nav-link(href='/blog') Blog
