--- a/views/serious-bar.pug
+++ b/views/serious-bar.pug
@@ -4,7 +4,7 @@ section#serious-bar.bg-blue.pt-l.pb-l
       .row.text-center.text-white
         for bar in barList
           .col-4
-            i.fas.fa-4x.fa-users
+            i.fas.fa-4x(class=bar.picto)
             .counter-value(data-count=bar.numbers) 0
             h2= bar.name
   // /.container
