Ajout de Greg au footer

--- a/views/footer_collab.pug
+++ b/views/footer_collab.pug
@@ -68,7 +68,7 @@ section#myFooter
           i.fab.fa-facebook-square
     .row.mention(style='text-align: center;')
       .col
-        p Alex est un super formateur
+        p Alex et Grey sont géniaux
       .col.cl-effect-1
         a(href='https://www.service-public.fr/professionnels-entreprises/vosdroits/F31228' target='_blank') Mention l&eacute;gale
       .col.cl-effect-1
