modification de la couleur du footer

--- a/views/recruteur.pug
+++ b/views/recruteur.pug
@@ -4,7 +4,7 @@ block content
     header
         include nav.pug
         include video_header_recruteur.pug
-    body
+    body(class=bodyClass)
         include section_collab.pug
         include serious-bar.pug
         include acceuil_entreprise.pug
