--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -577,10 +577,10 @@ body.admin {
 
 
 #header_blog .after {
--webkit-animation-delay: 500ms; 
--moz-animation-delay: 500ms; 
--ms-animation-delay: 500ms; 
--o-animation-delay: 500ms; 
+-webkit-animation-delay: 500ms;
+-moz-animation-delay: 500ms;
+-ms-animation-delay: 500ms;
+-o-animation-delay: 500ms;
 animation-delay: 500ms;
 animation: blink 1.3s infinite;
 }
@@ -662,6 +662,10 @@ z-index: 1;
 #myFooter {
   color:white;
   background-color: #8f201a; /* rouge */
+}
+.recruteur #myFooter {
+  color:#fff;
+  background-color: #19112f; /* rouge */
 }
 
 #myFooter a{
@@ -822,6 +826,9 @@ font-size: 2em;
 }
 
 /* Yoko */
+.recruteur #myFooter .input__field--yoko{
+  color: #0a7893;
+}
 #myFooter .input__field--yoko { /* Texte écris par l'utilisateur*/
   z-index: 10;
   width: 100%;
@@ -854,7 +861,9 @@ font-size: 2em;
   -webkit-transition: -webkit-transform 0.3s;
   transition: transform 0.3s;
 }
-
+.recruteur #myFooter .input__label--yoko::after{
+  background: #0a7893;
+}
 #myFooter .input__label--yoko::after { /* Barre type span */
   content: '';
   position: absolute;
@@ -907,7 +916,9 @@ font-size: 2em;
   -webkit-filter: url("#filter");
   filter: url("/#filter");
 }
-
+.recruteur #myFooter .form-control{
+  background-color: #0a7893!important;
+}
 #myFooter .form-control {
     margin-bottom: 0;
     background-color: #8f201a; /* rouge */
@@ -945,10 +956,10 @@ font-size: 2em;
 
 
 #header_blog .after {
--webkit-animation-delay: 500ms; 
--moz-animation-delay: 500ms; 
--ms-animation-delay: 500ms; 
--o-animation-delay: 500ms; 
+-webkit-animation-delay: 500ms;
+-moz-animation-delay: 500ms;
+-ms-animation-delay: 500ms;
+-o-animation-delay: 500ms;
 animation-delay: 500ms;
 animation: blink 1.3s infinite;
 }
