--- a/views/footer_collab.pug
+++ b/views/footer_collab.pug
@@ -75,7 +75,7 @@ section#myFooter
         p
           a(href='https://github.com/WildCodeSchool/bdx-0218-js-agencedigitale' target='_blank') What&apos;s Ouside The World
       .col.cl-effect-1
-        a(href='/admin') Administration
+        a(href='/login') Administration
     // End row mention
   // End Container
 // End myFooter
